--- a/app/src/main/res/layout/final_layout.xml
+++ b/app/src/main/res/layout/final_layout.xml
@@ -21,14 +21,56 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/chosen_topic"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
             android:padding="8dp"
-            android:text="More references..."
+            android:text="Topic"
+            android:textAllCaps="true"
+            android:textColor="@android:color/holo_orange_dark"
+            android:textSize="40sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="Check these references!!!"
             android:textColor="@android:color/holo_orange_dark"
             android:textSize="24sp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:layout_width="64sp"
+                android:layout_height="64sp"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="16dp"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:onClick="intentWikipedia"
+                android:scaleType="centerInside"
+                android:src="@drawable/wikipedia" />
+
+            <ImageButton
+                android:layout_width="64sp"
+                android:layout_height="64sp"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="16dp"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:onClick="intentMathifold"
+                android:scaleType="centerInside"
+                android:src="@drawable/mathifold" />
+
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
