--- a/app/src/main/res/layout/explanation_layout.xml
+++ b/app/src/main/res/layout/explanation_layout.xml
@@ -9,17 +9,17 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:padding="8dp"
+        android:padding="@dimen/standard_padding"
         android:text="You got everything right!!"
-        android:textColor="@android:color/holo_orange_dark"
-        android:textSize="24sp" />
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="@dimen/intro_text_size" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="@dimen/standard_padding">
 
 
         <ImageView
@@ -34,7 +34,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:padding="8dp"
+            android:padding="@dimen/standard_padding"
             android:text="text1"
             android:textSize="16sp" />
 
@@ -45,7 +45,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="@dimen/standard_padding">
 
 
         <ImageView
@@ -60,7 +60,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:padding="8dp"
+            android:padding="@dimen/standard_padding"
             android:text="text2"
             android:textSize="16sp" />
 
@@ -72,7 +72,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="@dimen/standard_padding">
 
 
         <ImageView
@@ -87,7 +87,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:padding="8dp"
+            android:padding="@dimen/standard_padding"
             android:text="text3"
             android:textSize="16sp" />
 
