--- a/app/src/main/res/layout/final_layout.xml
+++ b/app/src/main/res/layout/final_layout.xml
@@ -26,21 +26,21 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:padding="8dp"
+            android:padding="@dimen/standard_padding"
             android:text="Topic"
             android:textAllCaps="true"
-            android:textColor="@android:color/holo_orange_dark"
-            android:textSize="40sp" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/topic_text_size" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:padding="8dp"
+            android:padding="@dimen/standard_padding"
             android:text="Check these references!!!"
-            android:textColor="@android:color/holo_orange_dark"
-            android:textSize="24sp" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/intro_text_size" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -60,10 +60,10 @@
                 android:src="@drawable/wikipedia" />
 
             <ImageButton
-                android:layout_width="64sp"
-                android:layout_height="64sp"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="16dp"
+                android:layout_margin="@dimen/icon_margin"
                 android:adjustViewBounds="true"
                 android:background="@null"
                 android:onClick="intentMathifold"
@@ -77,10 +77,10 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:padding="8dp"
+            android:padding="@dimen/standard_padding"
             android:text="Hope you liked the game!!!"
-            android:textColor="@android:color/holo_orange_light"
-            android:textSize="24sp" />
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/intro_text_size" />
 
         <Space
             android:layout_width="match_parent"
